# UTAC-2026

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  style.css  vehicle_selection_module.md
IA/: requirements.txt
IA/src/dms_pilote/: CMakeLists.txt  package.xml
IA/src/dms_pilote/config/: params_utac.yaml
IA/src/dms_pilote/dms_pilote/: mediapipe_node.py
IA/src/dms_pilote/launch/: launch_utac.py
IA/src/dms_pilote/src/: alarm_node.cpp  attention_time_node.cpp  freinage_node.cpp
IHM/: package-lock.json  package.json
IHM/IHM_superviseur/Panel_Battery/: README.md  package-lock.json  package.json  unknown.mon-superviseur-0.0.0.foxe
IHM/IHM_superviseur/Panel_FlotteCars/: CHANGELOG.md  README.md  package-lock.json  package.json
IHM/IHM_superviseur/Panel_Map/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
IHM/IHM_superviseur/Panel_Status/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
IHM/IHM_superviseur/Panel_Stop/: CHANGELOG.md  README.md  package-lock.json  package.json  unknown.panel_stop-0.0.0.foxe
IHM/IHM_voiture/: kitti_player.py  main.py
IHM/IHM_voiture/Panel_3D/: kitti_player.py  panel_3d_node.py  readme.md
IHM/IHM_voiture/Panel_Acceleration/: CHANGELOG.md  README.md  package-lock.json  package.json  unknown.panel_acceleration-0.0.0.foxe
IHM/IHM_voiture/Panel_Battery/: CHANGELOG.md  battery_node.py  package-lock.json  readme.md  unknown.mon-superviseur-0.0.0.foxe
IHM/IHM_voiture/Panel_Camera/: camera_node.py  readme.md
IHM/IHM_voiture/Panel_Controles/: CHANGELOG.md  README.md  noeud_mode.py  noeud_urgence.py  package-lock.json  package.json  unknown.panel_controles-0.0.0.foxe
IHM/IHM_voiture/Panel_Dashboard/: package-lock.json  package.json  tsconfig.json  webpack.config.js
IHM/IHM_voiture/Panel_Destination/: CHANGELOG.md  README.md  destination_node.py  noeud_destination.py  package-lock.json  package.json  readme.md  (+1 more)
IHM/temp-fix/: CHANGELOG.md  README.md  package-lock.json  package.json
vehicle-supervision-panel/: README.md  package-lock.json  package.json
vehicle-supervision-panel/src/: VehiclePanel.ts
(+43 files in other folders)
